--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -45,4 +45,5 @@ COLUMN_COLUMN_NAME=Column Name
 COLUMN_MODIFIER=Accessor Modifier
 COLUMN_JAVA_CLASS=Class Name
 COLUMN_FIELD_NAME=Field Name
-PREFERENCE_USE_DOLTENG=Use Dolteng 
+PREFERENCE_USE_DOLTENG=Use Dolteng
+PREFERENCE_USE_S2DAO=Use S2Dao
