--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -47,3 +47,6 @@ COLUMN_JAVA_CLASS=Class Name
 COLUMN_FIELD_NAME=Field Name
 PREFERENCE_USE_DOLTENG=Use Dolteng
 PREFERENCE_USE_S2DAO=Use S2Dao
+PREFERENCE_DEFAULT_ENTITY_PKG=Default Entity Package
+PREFERENCE_DEFAULT_DAO_PKG=Default Dao Package
+BROWSE=Bro&wse...
