--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -50,3 +50,6 @@ PREFERENCE_USE_S2DAO=Use S2Dao
 PREFERENCE_DEFAULT_ENTITY_PKG=Default Entity Package
 PREFERENCE_DEFAULT_DAO_PKG=Default Dao Package
 BROWSE=Bro&wse...
+PACKAGE_SELECTION=Package Selection
+PACKAGE_SELECTION_DESC=&Choose a folder:
+PACKAGE_SELECTION_EMPTY=Cannot find packages to select.
