--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
@@ -24,7 +24,7 @@
       <view
             category="org.seasar.dolteng.eclipse.plugin"
             class="org.seasar.dolteng.eclipse.part.DatabaseView"
-            id="org.seasar.dolteng.eclipse.plugin.DatabaseView"
+            id="databaseView"
             name="DatabaseView"/>
    </extension>
    <extension
