git-svn-id: https://www.seasar.org/svn/chura/trunk@34 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
@@ -36,6 +36,18 @@
                relative="org.eclipse.jdt.ui.PackageExplorer"/>
       </perspectiveExtension>
    </extension>
+   <extension
+         point="org.eclipse.ui.popupMenus">
+      <viewerContribution
+            id="org.seasar.dolteng.eclipse.plugin.JPAAssociation"
+            targetID="#CompilationUnitEditorContext">
+         <action
+               class="org.seasar.dolteng.eclipse.action.JPAAssociateAction"
+               id="org.seasar.dolteng.eclipse.plugin.JPAAssociateAction"
+               label="Add JPAAssociation"
+               menubarPath="additions"/>
+      </viewerContribution>
+   </extension>
 
 
 </plugin>
