--- a/dolteng/org.seasar.dolteng.eclipse.plugin/.classpath
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/.classpath
@@ -6,6 +6,8 @@
 	<classpathentry output="target/test-classes" kind="src" path="src/test/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry sourcepath="lib/s2-framework-2.4.0-beta-4-sources.jar" kind="lib" path="lib/s2-framework-2.4.0-beta-4.jar"/>
+	<classpathentry sourcepath="lib/s2-extension-2.4.0-beta-4-sources.jar" kind="lib" path="lib/s2-extension-2.4.0-beta-4.jar"/>
 	<classpathentry kind="lib" path="lib/aopalliance-1.0.jar"/>
 	<classpathentry sourcepath="lib/commons-logging-1.0.4-src.zip" kind="lib" path="lib/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/javassist-3.0.jar"/>
@@ -13,8 +15,6 @@
 	<classpathentry kind="lib" path="lib/log4j-1.2.13.jar"/>
 	<classpathentry kind="lib" path="lib/ognl-2.6.7.jar"/>
 	<classpathentry kind="lib" path="lib/poi-2.5.1-final-20040804.jar"/>
-	<classpathentry sourcepath="lib/s2-extension-2.4.0-beta-4-SNAPSHOT-sources.jar" kind="lib" path="lib/s2-extension-2.4.0-beta-4-SNAPSHOT.jar"/>
-	<classpathentry sourcepath="lib/s2-framework-2.4.0-beta-4-SNAPSHOT-sources.jar" kind="lib" path="lib/s2-framework-2.4.0-beta-4-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/stax-1.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/geronimo-j2ee_1.4_spec-1.0.jar"/>
