--- a/dolteng/org.seasar.dolteng.eclipse.plugin/build.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/build.properties
@@ -1,7 +1,15 @@
 bin.includes = plugin.xml,\
                META-INF/,\
                dolteng-core.jar,\
-               lib/
+               lib/,\
+               plugin.properties,\
+               plugin_ja.properties
 jars.compile.order = dolteng-core.jar
 source.dolteng-core.jar = target/classes/
-src.includes = lib/
+src.includes = lib/,\
+               plugin.properties,\
+               plugin.xml,\
+               plugin_ja.properties,\
+               META-INF/,\
+               src/main/java/,\
+               src/main/resources/
