git-svn-id: https://www.seasar.org/svn/chura/trunk/dolteng/org.seasar.dolteng.eclipse.plugin@45 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,15 @@
 bin.includes = plugin.xml,\
                META-INF/,\
                dolteng-core.jar,\
-               lib/
+               lib/,\
+               plugin.properties,\
+               plugin_ja.properties
 jars.compile.order = dolteng-core.jar
 source.dolteng-core.jar = target/classes/
-src.includes = lib/
+src.includes = lib/,\
+               plugin.properties,\
+               plugin.xml,\
+               plugin_ja.properties,\
+               META-INF/,\
+               src/main/java/,\
+               src/main/resources/
