--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -53,10 +53,11 @@ BROWSE=Bro&wse...
 PACKAGE_SELECTION=Package Selection
 PACKAGE_SELECTION_DESC=&Choose a folder:
 PACKAGE_SELECTION_EMPTY=Cannot find packages to select.
-JPA_ASSOCIATION_DIALOG_TITLE=Configure JPA Annotation
+JPA_ASSOCIATION_DIALOG_TITLE=Configure JPA Annotation ...
 JPA_ASSOCIATION_DIALOG_ANNOTATION_NAME=Annotation Name :
 JPA_ASSOCIATION_DIALOG_TARGETENTITY=targetEntity :
 JPA_ASSOCIATION_DIALOG_CASCADE=cascade :
 JPA_ASSOCIATION_DIALOG_FETCH=fetch :
 JPA_ASSOCIATION_DIALOG_OPTIONAL=optional :
 JPA_ASSOCIATION_DIALOG_MAPPEDBY=mappedBy :
+REFRESH=Refresh
