git-svn-id: https://www.seasar.org/svn/chura/trunk@52 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -53,10 +53,11 @@ BROWSE=Bro&wse...
 PACKAGE_SELECTION=Package Selection
 PACKAGE_SELECTION_DESC=&Choose a folder:
 PACKAGE_SELECTION_EMPTY=Cannot find packages to select.
-JPA_ASSOCIATION_DIALOG_TITLE=Configure JPA Annotation
+JPA_ASSOCIATION_DIALOG_TITLE=Configure JPA Annotation ...
 JPA_ASSOCIATION_DIALOG_ANNOTATION_NAME=Annotation Name :
 JPA_ASSOCIATION_DIALOG_TARGETENTITY=targetEntity :
 JPA_ASSOCIATION_DIALOG_CASCADE=cascade :
 JPA_ASSOCIATION_DIALOG_FETCH=fetch :
 JPA_ASSOCIATION_DIALOG_OPTIONAL=optional :
 JPA_ASSOCIATION_DIALOG_MAPPEDBY=mappedBy :
+REFRESH=Refresh
