git-svn-id: https://www.seasar.org/svn/chura/trunk@63 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
@@ -48,6 +48,20 @@
                menubarPath="additions"/>
       </viewerContribution>
    </extension>
+   <extension
+         point="org.eclipse.ui.newWizards">
+      <category
+            id="org.seasar.dolteng.eclipse.plugin"
+            name="Chura"/>
+      <wizard
+            canFinishEarly="false"
+            category="org.seasar.dolteng.eclipse.plugin"
+            class="org.seasar.dolteng.eclipse.wizard.ChuraProjectWizard"
+            hasPages="true"
+            id="ChuraProjectWizard"
+            name="Chura Project"
+            project="true"/>
+   </extension>
 
 
 </plugin>
