--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -61,3 +61,4 @@ JPA_ASSOCIATION_DIALOG_FETCH=fetch :
 JPA_ASSOCIATION_DIALOG_OPTIONAL=optional :
 JPA_ASSOCIATION_DIALOG_MAPPEDBY=mappedBy :
 REFRESH=Refresh
+WIZARD_CHURA_PROJECT_TITLE=Create a Chura Project
