git-svn-id: https://www.seasar.org/svn/chura/trunk@64 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -62,3 +62,4 @@ JPA_ASSOCIATION_DIALOG_OPTIONAL=optional :
 JPA_ASSOCIATION_DIALOG_MAPPEDBY=mappedBy :
 REFRESH=Refresh
 WIZARD_CHURA_PROJECT_TITLE=Create a Chura Project
+WIZARD_PAGE_CHURA_ROOT_PACKAGE=Root Package Name :
