--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -62,3 +62,4 @@ JPA_ASSOCIATION_DIALOG_OPTIONAL=optional :
 JPA_ASSOCIATION_DIALOG_MAPPEDBY=mappedBy :
 REFRESH=Refresh
 WIZARD_CHURA_PROJECT_TITLE=Create a Chura Project
+WIZARD_PAGE_CHURA_ROOT_PACKAGE=Root Package Name :
