git-svn-id: https://www.seasar.org/svn/chura/trunk/dolteng/org.seasar.dolteng.eclipse.plugin@69 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/build.properties
+++ b/build.properties
@@ -3,7 +3,8 @@ bin.includes = plugin.xml,\
                dolteng-core.jar,\
                lib/,\
                plugin.properties,\
-               plugin_ja.properties
+               plugin_ja.properties,\
+               template/
 jars.compile.order = dolteng-core.jar
 source.dolteng-core.jar = target/classes/
 src.includes = lib/,\
@@ -12,4 +13,5 @@ src.includes = lib/,\
                plugin_ja.properties,\
                META-INF/,\
                src/main/java/,\
-               src/main/resources/
+               src/main/resources/,\
+               template/
