git-svn-id: https://www.seasar.org/svn/chura/trunk@70 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
@@ -24,7 +24,7 @@
       <view
             category="org.seasar.dolteng.eclipse.plugin"
             class="org.seasar.dolteng.eclipse.part.DatabaseView"
-            id="databaseView"
+            id="org.seasar.dolteng.eclipse.databaseView"
             name="DatabaseView"/>
    </extension>
    <extension
