--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,6 @@
 	<classpathentry kind="lib" path="lib/postgresql-8.1-407.jdbc3.jar"/>
 	<classpathentry sourcepath="lib/s2-extension-2.4.0-beta-5-SNAPSHOT-sources.jar" kind="lib" path="lib/s2-extension-2.4.0-beta-5-SNAPSHOT.jar"/>
 	<classpathentry sourcepath="lib/s2-framework-2.4.0-beta-5-SNAPSHOT-sources.jar" kind="lib" path="lib/s2-framework-2.4.0-beta-5-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/hsqldb-1.8.0.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
