--- a/build.properties
+++ b/build.properties
@@ -15,3 +15,9 @@ src.includes = lib/,\
                src/main/java/,\
                src/main/resources/,\
                template/
+bin.excludes = template/kuina/,\
+               template/teeda/,\
+               lib/s2-framework-2.4.0-beta-5-SNAPSHOT-sources.jar,\
+               lib/s2-extension-2.4.0-beta-5-SNAPSHOT-sources.jar,\
+               lib/postgresql-8.1-407.jdbc3.jar,\
+               lib/commons-logging-1.0.4-src.zip
