--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Images.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Images.properties
@@ -32,3 +32,5 @@ PROTECTED_CO=images/protected_co.gif
 DEFAULT_CO=images/default_co.gif
 PRIVATE_CO=images/private_co.gif
 JAVA_PROJECT=images/javaproject.gif
+CHECKED=images/checked.gif
+UNCHECKED=images/unchecked.gif
