--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -49,6 +49,7 @@ PREFERENCE_USE_DOLTENG=Use Dolteng
 PREFERENCE_USE_S2DAO=Use S2Dao
 PREFERENCE_DEFAULT_ENTITY_PKG=Default Entity Package
 PREFERENCE_DEFAULT_DAO_PKG=Default Dao Package
+PREFERENCE_DEFAULT_WEB_PKG=Default Web Package
 BROWSE=Bro&wse...
 PACKAGE_SELECTION=Package Selection
 PACKAGE_SELECTION_DESC=&Choose a folder:
@@ -63,3 +64,6 @@ JPA_ASSOCIATION_DIALOG_MAPPEDBY=mappedBy :
 REFRESH=Refresh
 WIZARD_CHURA_PROJECT_TITLE=Create a Chura Project
 WIZARD_PAGE_CHURA_ROOT_PACKAGE=Root Package Name :
+WIZARD_PAGE_PAGE_FIELD_SELECTION=Edit Page fields
+WIZARD_PAGE_CREATION_DESCRIPTION=Edit Field Modifier, Field Type and Field Name
+WIZARD_PAGE_PAGE_TREE_LABEL=Available Fields ...
