--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Images.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Images.properties
@@ -34,3 +34,4 @@ PRIVATE_CO=images/private_co.gif
 JAVA_PROJECT=images/javaproject.gif
 CHECKED=images/checked.gif
 UNCHECKED=images/unchecked.gif
+CHECK=images/check.gif
