--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -49,6 +49,7 @@ PREFERENCE_USE_DOLTENG=Use Dolteng
 PREFERENCE_USE_S2DAO=Use S2Dao
 PREFERENCE_DEFAULT_ENTITY_PKG=Default Entity Package
 PREFERENCE_DEFAULT_DAO_PKG=Default Dao Package
+PREFERENCE_DEFAULT_DTO_PKG=Default Dto Package
 PREFERENCE_DEFAULT_WEB_PKG=Default Web Package
 BROWSE=Bro&wse...
 PACKAGE_SELECTION=Package Selection
@@ -69,3 +70,5 @@ WIZARD_PAGE_CREATION_DESCRIPTION=Edit Field Modifier, Field Type and Field Name
 WIZARD_PAGE_PAGE_TREE_LABEL=Available Fields ...
 COLUMN_ENTITY_CLASS=Entity Class Name
 COLUMN_ENTITY_FIELD=Entity Field Name
+WIZARD_PAGE_SEPARATE_DESCRIPTION=Do you want to separate Page and Action ?
+WIZARD_PAGE_SEPARATE=Separate Page and Action
