git-svn-id: https://www.seasar.org/svn/chura/trunk@110 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/chura-example/.classpath
+++ b/chura-example/.classpath
@@ -19,8 +19,6 @@
 	<classpathentry exported="true" sourcepath="/teeda" kind="lib" path="WEB-INF/lib/teeda-extension-1.0-beta-6-SNAPSHOT.jar"/>
 	<classpathentry exported="true" sourcepath="/xerces-2/src" kind="lib" path="WEB-INF/lib/xercesImpl-2.6.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="WEB-INF/lib/xmlParserAPIs-2.6.2.jar"/>
-	<classpathentry exported="true" sourcepath="WEB-INF/lib/sources/s2-framework-2.4.0-beta-5-SNAPSHOT-sources.jar" kind="lib" path="WEB-INF/lib/s2-framework-2.4.0-beta-5-SNAPSHOT.jar"/>
-	<classpathentry exported="true" sourcepath="WEB-INF/lib/sources/s2-extension-2.4.0-beta-5-SNAPSHOT-sources.jar" kind="lib" path="WEB-INF/lib/s2-extension-2.4.0-beta-5-SNAPSHOT.jar"/>
 	<classpathentry exported="true" sourcepath="WEB-INF/lib/sources/s2-tiger-2.4.0-beta-5-SNAPSHOT-sources.jar" kind="lib" path="WEB-INF/lib/s2-tiger-2.4.0-beta-5-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="WEB-INF/lib/antlr-2.7.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="WEB-INF/lib/asm-1.5.3.jar"/>
@@ -39,5 +37,7 @@
 	<classpathentry kind="var" path="TOMCAT_HOME/common/lib/servlet-api.jar"/>
 	<classpathentry kind="var" path="TOMCAT_HOME/common/lib/jasper-runtime.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/geronimo-ejb_2.1_spec-1.0.jar"/>
+	<classpathentry sourcepath="WEB-INF/lib/sources/s2-extension-2.4.0-rc-2-SNAPSHOT-sources.jar" kind="lib" path="WEB-INF/lib/s2-extension-2.4.0-rc-2-SNAPSHOT.jar"/>
+	<classpathentry sourcepath="WEB-INF/lib/sources/s2-framework-2.4.0-rc-2-SNAPSHOT-sources.jar" kind="lib" path="WEB-INF/lib/s2-framework-2.4.0-rc-2-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
