--- a/dolteng/org.seasar.dolteng.eclipse.plugin/.classpath
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/.classpath
@@ -16,15 +16,14 @@
 	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/geronimo-j2ee_1.4_spec-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/postgresql-8.1-407.jdbc3.jar"/>
-	<classpathentry sourcepath="lib/s2-extension-2.4.0-beta-5-SNAPSHOT-sources.jar" kind="lib" path="lib/s2-extension-2.4.0-beta-5-SNAPSHOT.jar"/>
-	<classpathentry sourcepath="lib/s2-framework-2.4.0-beta-5-SNAPSHOT-sources.jar" kind="lib" path="lib/s2-framework-2.4.0-beta-5-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/hsqldb-1.8.0.1.jar"/>
 	<classpathentry sourcepath="lib/teeda-core-1.0-beta-6-SNAPSHOT-sources.jar" kind="lib" path="lib/teeda-core-1.0-beta-6-SNAPSHOT.jar"/>
 	<classpathentry sourcepath="lib/teeda-extension-1.0-beta-6-SNAPSHOT-sources.jar" kind="lib" path="lib/teeda-extension-1.0-beta-6-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/xercesImpl-2.6.2.jar"/>
-	<classpathentry kind="lib" path="lib/xmlParserAPIs-2.6.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/xalan-2.7.0.jar"/>
 	<classpathentry kind="lib" path="lib/xml-apis.jar"/>
+	<classpathentry kind="lib" path="lib/s2-extension-2.4.0-rc-2-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/s2-framework-2.4.0-rc-2-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
