--- a/dolteng/org.seasar.dolteng.eclipse.plugin/build.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/build.properties
@@ -20,4 +20,7 @@ bin.excludes = template/kuina/,\
                lib/s2-framework-2.4.0-beta-5-SNAPSHOT-sources.jar,\
                lib/s2-extension-2.4.0-beta-5-SNAPSHOT-sources.jar,\
                lib/postgresql-8.1-407.jdbc3.jar,\
-               lib/commons-logging-1.0.4-src.zip
+               lib/commons-logging-1.0.4-src.zip,\
+               lib/teeda-core-1.0-beta-6-SNAPSHOT-sources.jar,\
+               lib/teeda-extension-1.0-beta-6-SNAPSHOT-sources.jar,\
+               lib/xmlParserAPIs-2.6.2.jar
