git-svn-id: https://www.seasar.org/svn/chura/trunk@123 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.properties
@@ -15,3 +15,5 @@
 ###############################################################################
 author=the Seasar Foundation
 plugin.brand=Dolteng Eclipse Plugin
+
+openPagePair.label=Open Page Pair
