--- a/plugin.properties
+++ b/plugin.properties
@@ -15,3 +15,5 @@
 ###############################################################################
 author=the Seasar Foundation
 plugin.brand=Dolteng Eclipse Plugin
+
+openPagePair.label=Open Page Pair
