--- a/plugin.properties
+++ b/plugin.properties
@@ -17,3 +17,4 @@ author=the Seasar Foundation
 plugin.brand=Dolteng Eclipse Plugin
 
 openPagePair.label=Open Page Pair
+openActionPair.label=Open Action Pair
