git-svn-id: https://www.seasar.org/svn/chura/trunk@124 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.properties
@@ -17,3 +17,4 @@ author=the Seasar Foundation
 plugin.brand=Dolteng Eclipse Plugin
 
 openPagePair.label=Open Page Pair
+openActionPair.label=Open Action Pair
