git-svn-id: https://www.seasar.org/svn/chura/trunk@145 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -72,3 +72,5 @@ COLUMN_ENTITY_CLASS=Entity Class Name
 COLUMN_ENTITY_FIELD=Entity Field Name
 WIZARD_PAGE_SEPARATE_DESCRIPTION=Do you want to separate Page and Action ?
 WIZARD_PAGE_SEPARATE=Separate Page and Action
+WIZARD_BASE_PAGE_DESCRIPTION=Do you want to create base class ?
+WIZARD_BASE_PAGE=Create Or Update Base Class
