--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -72,3 +72,5 @@ COLUMN_ENTITY_CLASS=Entity Class Name
 COLUMN_ENTITY_FIELD=Entity Field Name
 WIZARD_PAGE_SEPARATE_DESCRIPTION=Do you want to separate Page and Action ?
 WIZARD_PAGE_SEPARATE=Separate Page and Action
+WIZARD_BASE_PAGE_DESCRIPTION=Do you want to create base class ?
+WIZARD_BASE_PAGE=Create Or Update Base Class
